--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -32,7 +32,7 @@ contact_links:
   - icon: twitter
     icon_pack: fab
     name: DM Me
-    link: 'https://twitter.com/SkyAoXiaojian'
+    link: 'https://twitter.com/skyaoxiaojian80'
 
 
 # Site header
