--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -28,3 +28,9 @@ main:
   - name: 和我联系
     url: '#contact'
     weight: 80
+
+# Link to a PDF of your resume/CV from the menu.
+# To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
+#  - name: CV
+#    url: uploads/resume.pdf
+#    weight: 70
