install detectron2 on windows

--- a/assets/jsconfig.json
+++ b/assets/jsconfig.json
@@ -3,7 +3,7 @@
   "baseUrl": ".",
   "paths": {
    "*": [
-    "../../hugo-blox-builder/modules/blox-bootstrap/assets/*"
+    "..\\..\\hugo-blox-builder\\modules\\blox-bootstrap\\assets\\*"
    ]
   }
  }
