--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -12,7 +12,7 @@
 zh:
   languageCode: zh-Hans
 #  contentDir: content
-  title: 敖小剑的博客
+  title: 敖小剑的技术分享
 #  params:
 #    description: Site description in Chinese...
 #  menu:
