--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -45,7 +45,7 @@ header:
 
 footer:
   copyright:
-    notice: '敖小剑的技术分享 ICP备案/许可证号:[粤ICP备2025423241号](https://beian.miit.gov.cn) 公网安备进行中'
+    notice: '敖小剑的技术分享 ICP备案/许可证号:[粤ICP备2025423241号](https://beian.miit.gov.cn) [粤公网安备44010602013705号](https://beian.mps.gov.cn/#/query/webSearch)'
     license:
       enable: false
       allow_derivatives: false
